src/tokenizer/snapshots/reconcile_text__tokenizer__word_tokenizer__tests__with_snapshots-2.snap
---
source: src/tokenizer/word_tokenizer.rs
expression: "word_tokenizer(\"\")"
snapshot_kind: text
---
[]
