src/tokenizer/snapshots/reconcile_text__tokenizer__word_tokenizer__tests__with_snapshots-3.snap
---
source: src/tokenizer/word_tokenizer.rs
expression: "word_tokenizer(\" what? \")"
snapshot_kind: text
---
[
    Token {
        normalized: " what?",
        original: " ",
        is_left_joinable: true,
        is_right_joinable: true,
    },
    Token {
        normalized: "what?",
        original: "what?",
        is_left_joinable: true,
        is_right_joinable: true,
    },
    Token {
        normalized: " ",
        original: " ",
        is_left_joinable: true,
        is_right_joinable: true,
    },
]
