src/tokenizer/snapshots/reconcile_text__tokenizer__word_tokenizer__tests__with_snapshots.snap
---
source: src/tokenizer/word_tokenizer.rs
expression: "word_tokenizer(\"Hi there!\")"
snapshot_kind: text
---
[
    Token {
        normalized: "Hi",
        original: "Hi",
        is_left_joinable: true,
        is_right_joinable: true,
    },
    Token {
        normalized: " there!",
        original: " ",
        is_left_joinable: true,
        is_right_joinable: true,
    },
    Token {
        normalized: "there!",
        original: "there!",
        is_left_joinable: true,
        is_right_joinable: true,
    },
]
